...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_category_color"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="@+id/text_color_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_color_name"
        app:strokeWidth="0dp">

    </com.google.android.material.card.MaterialCardView>

...
